[package]
name = "urbit-operator-toolkit"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
urbit-http-api          = "0.2.1"
json                    = "0.12.4"
serde                   = "1.0.123"
docopt                  = "1.1.0"
